@@ -1,3 +1,4 @@
+1.1.2-0 @06/28/2005 21:15:00 UTC@
 1.1.1-0 @06/09/2005 23:50:00 UTC@
 1.1.0-0 @06/07/2005 03:15:00 UTC@
 0.93.0-0 @06/07/2005 02:35:00 UTC@
